feat: add new restaurant function

--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -2,7 +2,7 @@
   <img src="{{restaurants.image}}" alt="restaurant-image" style="height: 300px; ">
   <h1>{{restaurants.name}}</h1>
   <p>{{restaurants.category}}</p>
-  <p>{{restaurants.location}}</p>
-  <p>{{restaurants.phone}}</p>
+  <p> 地址：{{restaurants.location}}</p>
+  <p> 電話：{{restaurants.phone}}</p>
   <p>{{restaurants.description}}</p>
 </div>
