--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,7 @@
+<div class="line">
+  <img src="https://res.cloudinary.com/dnivakimu/image/upload/v1615038574/duck-line_y6wjby.png" alt="">
+</div>
+
 {{!-- card --}}
 <div class="container">
   <div class="row">
@@ -23,6 +27,9 @@
       </div>
     </div>
     {{/each}}
+  </div>
+  <div class="line">
+    <img src="https://res.cloudinary.com/dnivakimu/image/upload/v1615038574/duck-line_y6wjby.png" alt="">
   </div>
   <script>
     function confirmBtn() {
