--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,26 +1,48 @@
 /* title */
 *{
   font-family: 'Julius Sans One', sans-serif;
-  //border: solid 1px red;
+  position: relative;
 }
-.nav-bar{
-  background-color: #edeceb;
+.navbar{
+  width: 100%;
+  background-color: #B0DCDD;
+  display: inline-block;
+  position: relative;
 }
 
+.nav-btn {
+  display: inline-block;
+}
+
+body{
+  /* background-color: #eaeaea; */
+  background-color: #B0DCDD;
+}
+
+a {
+  text-decoration: none;
+}
 .title-image {
   width: 100%;
   height: 360px;
-  background: center center url('https://images.unsplash.com/photo-1505935428862-770b6f24f629?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1947&q=80');
+  background: center center url('https://images.unsplash.com/photo-1532723136756-147542750512?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');
   background-size: cover;
+  /* filter: blur(1px); */
 }
 
+
 .search-bar {
+  /* position */
+  position: relative;
   margin: auto;
-  margin-top: 20px;
-  width: 70%;
+  margin-top: -260px;
+  /* search bar樣式 */
+  width: 60%;
   height: 200px;
   background-color: #edeceb;
-  border-radius: 10px;
+  border-radius: 100px;
+  background-color: rgba(241, 230, 192, 0.6);
+  box-shadow: 2px 2px 8px;
 }
 
 .search-form {
@@ -28,12 +50,30 @@
   justify-content: center;
   padding: 60px;
 }
+
+.add-list {
+  background-color: tomato;
+  color: #fafafa;
+  padding: 10px;
+  border-radius: 10px;
+  text-decoration:none;
+}
+
+/* a:hover {
+background-color: tomato;
+color:#fafafa;
+} */
 /* index */
+.line{
+  text-align: center;
+  margin: 20px;
+}
 .card {
   margin: auto;
-  margin-top: 8%;
+  margin-top: 40%;
   border-radius: 15px;
   box-shadow: 2px 2px 8px;
+
 }
 
 .card-img-top{
@@ -67,7 +107,7 @@ a{
   color: white;
   border: solid 1px ;
   border-radius: 10px;
-  background-color: #adb5be;
+  background-color: #d9e0b0;
   padding: 8px;
  
 }
@@ -84,7 +124,7 @@ a{
   display: inline;
   text-decoration:none;
   color: white;
-  background-color: #adb5be;
+  background-color: #d9e0b0;
   border-radius:10px ;
   padding: 8px;
   margin: 5px;
@@ -100,10 +140,32 @@ a{
 
 /* new page */
 .new-page{
-  border: solid 1px red;
+  margin: auto;
+  width: 60%;
+  background-color: rgba(192,192,192,0.4);
+  border-radius: 30px;
+  border: solid 3px white;
+  margin-top: 5%;
+  padding: 20px;
+}
+.new-title{
+  text-align: center;
+  padding: 10px;
 }
 .add-new-restaurants{
   margin: auto;
   width: 70%;
   border: turquoise;
+}
+
+/* edit page */
+
+.edit-page {
+  margin: auto;
+  width: 60%;
+  background-color: rgba(192,192,192,0.4);
+  border-radius: 30px;
+  border: solid 3px white;
+  margin-top: 5%;
+  padding: 20px;
 }
