--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,19 @@
-<div class="line">
-  <img src="https://res.cloudinary.com/dnivakimu/image/upload/v1615038574/duck-line_y6wjby.png" alt="">
+{{!-- search bar --}}
+<div class="search-bar">
+  <form action="/search" class="search-form">
+    <label class="search-title" for="keyword"> search for restaurants...</label>
+    <div class="input-group search-input">
+      <input class="form-control" type="text" name="keyword" placeholder="Search Restaurant..." aria-label="Search">
+      <button class="btn btn-outline-info" type="submit"><i class="fas fa-search"></i></button>
+    </div>
+  </form>
 </div>
 
 {{!-- card --}}
 <div class="container">
   <div class="row">
     {{#each restaurants}}
-    <div class="col-sm-4 mt-6">
+    <div class="col-sm-4">
       <div class="card" style="width: 18rem;">
         <img src="{{this.image}}" class="card-img-top" alt="image">
         <div class="card-body">
