--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,54 +1,37 @@
 /* title */
 *{
-  font-family: 'Julius Sans One', sans-serif;
+  /* font-family: 'Julius Sans One', sans-serif; */
+  /* font-family: 'Gaegu', cursive; */
+  font-family: 'Mukta', sans-serif;
   position: relative;
-}
-.navbar{
-  width: 100%;
-  background-color: #B0DCDD;
-  display: inline-block;
-  position: relative;
-}
-
-.nav-btn {
-  display: inline-block;
+  box-sizing: border-box;
+  outline: none;
 }
 
 body{
-  /* background-color: #eaeaea; */
-  background-color: #B0DCDD;
+  background-color: #2B2C28;
+  padding: 40px;
+  padding-top: 0px;
+  /* background-color: #fafafa; */
 }
 
-a {
-  text-decoration: none;
+.body-container {
+  background-color: #fafafa;
+  border-radius: 15px;
+  padding: 10px;
 }
-.title-image {
+.navbar{
   width: 100%;
-  height: 360px;
-  background: center center url('https://images.unsplash.com/photo-1532723136756-147542750512?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');
-  background-size: cover;
-  /* filter: blur(1px); */
-}
-
-
-.search-bar {
-  /* position */
+  display: inline-block;
   position: relative;
-  margin: auto;
-  margin-top: -260px;
-  /* search bar樣式 */
-  width: 60%;
-  height: 200px;
-  background-color: #edeceb;
-  border-radius: 100px;
-  background-color: rgba(241, 230, 192, 0.6);
-  box-shadow: 2px 2px 8px;
+  color: #fafafa;
 }
-
-.search-form {
-  display: flex;
-  justify-content: center;
-  padding: 60px;
+a{
+  text-decoration: none;
+  color: #fafafa;
+}
+a:hover{
+  color: #fafafa;
 }
 
 .add-list {
@@ -58,12 +41,48 @@ a {
   border-radius: 10px;
   text-decoration:none;
 }
+.add-list:hover{
+  color: #fafafa;
+}
 
-/* a:hover {
-background-color: tomato;
-color:#fafafa;
-} */
+
+a {
+  text-decoration: none;
+}
+.title-image {
+  width: 100%;
+  height: 360px;
+  /* background: center center url('https://images.unsplash.com/photo-1532723136756-147542750512?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80'); */
+  background: center center url('https://images.unsplash.com/photo-1525648199074-cee30ba79a4a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+  background-size: cover;
+  filter: blur(1px);
+}
+
+
+.search-bar {
+  /* position */
+  position: relative;
+  margin: auto;
+  padding: 20px;
+  margin-top: -80px;
+  /* search bar樣式 */
+  width: 60%;
+  height: 150px;
+  /* background-color: #edeceb; */
+  border-radius: 10px;
+  background-color: rgba(212, 217, 218, 0.5);
+  box-shadow: 2px 2px 8px;
+}
+
+.search-title {
+  font-size: 20px;
+}
+
 /* index */
+.container {
+  margin-top: -35px;
+}
+
 .line{
   text-align: center;
   margin: 20px;
@@ -111,6 +130,10 @@ a{
   padding: 8px;
  
 }
+.cardBtn:hover {
+  text-decoration: none;
+  color: #fafafa;
+}
 .btn-edit {
   color:white;
   background-color: transparent;
@@ -133,9 +156,29 @@ a{
 
 /* detail */
 .restaurant-detail{
-  text-align: center;
+  padding: 40px;
+  margin: 5px;
+  /* text-align: center; */
   background-color: #f6f3ee;
   border: #f6f3ee;
+}
+
+.fa-location-arrow {
+  color: #2B2C28;
+}
+
+.detail-image {
+  border-radius: 10px;
+}
+
+.detail-category {
+  display: inline-block;
+  padding: 5px;
+  padding-right: 20px;
+  padding-left: 20px;
+  background-color: #FA877C;
+  color: #fafafa;
+  border-radius: 5px;
 }
 
 /* new page */
@@ -158,6 +201,10 @@ a{
   border: turquoise;
 }
 
+.text-area {
+  width: 100%;
+}
+
 /* edit page */
 
 .edit-page {
@@ -168,4 +215,37 @@ a{
   border: solid 3px white;
   margin-top: 5%;
   padding: 20px;
+}
+
+/* RWD */
+@media screen and (max-width: 992px) {
+  
+  .card img{
+    height: 115px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  
+.search-bar {
+  position: static;
+  width: 100%;
+  padding: 10px;
+  margin-top: 20px;
+  border-radius: 20px;
+  background-color: rgba(192,195,192,0.6);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
+.search-title {
+  font-size: 25px;
+}
+
+}
+
+@media screen and (max-width: 575px) {
+  
+  .card img{
+    height: auto;
+  }
+  
 }
