--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -4,33 +4,44 @@
     <hr>
     <div class="row mb-3">
       <div class="col-sm-6">
-        <p>*餐廳名稱 ：</p>
-        <input type="text" name="name" placeholder="name" value="{{restaurants.name}}">
+        <label class="form-label" for="name">餐廳名稱 ：</label>
+        <input class="form-control" type="text" name="name" placeholder="name" value="{{restaurants.name}}" required>
       </div>
       <div class="col-sm-6">
-        <p>餐廳電話 ：</p>
-        <input type="text" name="phone" placeholder="phone" value="{{restaurants.phone}}">
+        <label class="form-label" for="phone">餐廳電話 ：</label>
+        <input class="form-control" type="text" name="phone" placeholder="phone" value="{{restaurants.phone}}">
       </div>
     </div>
     <div class="row mb-3">
       <div class="col-sm-6">
-        <p>*餐廳類型 ：</p>
-        <input type="text" name="category" placeholder="category" value="{{restaurants.category}}">
+        <label class="form-label" for="category">餐廳類型 ：</label>
+        <input class="form-control" list="categorys" name="category" placeholder="category" id="category"
+          value="{{restaurants.category}}" required>
+        <datalist id="categorys">
+          <option>中東料理</option>
+          <option>日本料理</option>
+          <option>義式餐廳</option>
+          <option>美式</option>
+          <option>酒吧</option>
+          <option>咖啡</option>
+        </datalist>
       </div>
       <div class="col-sm-6">
-        <p>*評分 ： </p>
-        <input type="text" name="rating" placeholder="rating" value="{{restaurants.rating}}">
+        <label class="form-label" for="rating">評分 ： </label>
+        <input type="number" class="form-control" name="rating" min="0" max="5" step="0.1"
+          value="{{restaurants.rating}}" required>
       </div>
     </div>
     <div class="row mb-3">
       <div class="col-sm-12">
-        <p>地址 ：</p>
+        <label class="form-label" for="location">地址 ：</label>
         <input type="text" name="location" placeholder="location" class="form-control" value="{{restaurants.location}}">
       </div>
     </div>
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">*圖片網址：</label>
-      <input type="text" name="image" placeholder="image address" class="form-control" value="{{restaurants.image}}">
+      <label for="exampleInputEmail1" class="form-label">圖片網址：</label>
+      <input type="text" name="image" placeholder="image address" class="form-control" value="{{restaurants.image}}"
+        required>
     </div>
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Google Map 網址：</label>
@@ -39,8 +50,9 @@
     </div>
     <div class="mb-3 input-group-lg">
       <label for="exampleInputEmail1" class="form-label">餐廳描述：</label>
-      <input type="text" name="description" placeholder="description" class="form-control"
-        value="{{restaurants.description}}">
+      <textarea name="description" id="exampleInputEmail1" cols="40" rows="3" class="text-area">
+        {{restaurants.description}}
+      </textarea>
     </div>
     <button type="submit" onclick="return saveBtn()"> Save</button>
   </form>
