--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,36 +1,47 @@
 <div class="container-fluid new-page">
   <h2 class="new-title">新增餐廳</h2>
   <hr>
-  <form action="/restaurants/new" method="POST" class="add-new-restaurants">
+  <form action="/restaurants/new" method="POST" class="add-new-restaurants" novalidte>
     <div class="row mb-3">
       <div class="col-sm-6">
-        <p>*餐廳名稱 ：</p>
-        <input type="text" name="name" placeholder="name">
+        <label class="form-label" for="name">*餐廳名稱 ：</label>
+        <input class="form-control" type="text" name="name" placeholder="name" required>
+        <div class="invalid-feedback">
+          Please provide a valid city.
+        </div>
       </div>
       <div class="col-sm-6">
-        <p>餐廳電話 ：</p>
-        <input type="text" name="phone" placeholder="phone">
+        <label class="form-label" for="phone">餐廳電話 ：</label>
+        <input class="form-control" type="text" name="phone" placeholder="phone">
       </div>
     </div>
     <div class="row mb-3">
       <div class="col-sm-6">
-        <p>*餐廳類型 ：</p>
-        <input type="text" name="category" placeholder="category">
+        <label class="form-label" for="category">*餐廳類型 ：</label>
+        <input class="form-control" list="categorys" name="category" placeholder="category" id="category" required>
+        <datalist id="categorys">
+          <option>中東料理</option>
+          <option>日本料理</option>
+          <option>義式餐廳</option>
+          <option>美式</option>
+          <option>酒吧</option>
+          <option>咖啡</option>
+        </datalist>
       </div>
       <div class="col-sm-6">
-        <p>*評分 ： </p>
-        <input type="text" name="rating" placeholder="rating">
+        <label class="form-label" for="rating">*評分 ： </label>
+        <input type="number" class="form-control" name="rating" min="0" max="5" step="0.1" required>
       </div>
     </div>
     <div class="row mb-3">
       <div class="col-sm-12">
-        <p>地址 ：</p>
-        <input type="text" name="location" placeholder="location" class="form-control">
+        <label class="form-label" for="location">地址 ：</label>
+        <input class="form-control" type="text" name="location" placeholder="location">
       </div>
     </div>
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">*圖片網址：</label>
-      <input type="text" name="image" placeholder="image address" class="form-control">
+      <input type="text" name="image" placeholder="image address" class="form-control" required>
     </div>
     <div class="mb-3">
       <label for="exampleInputEmail1" class="form-label">Google Map 網址：</label>
@@ -38,14 +49,29 @@
     </div>
     <div class="mb-3 input-group-lg">
       <label for="exampleInputEmail1" class="form-label">餐廳描述：</label>
-      <input type="text" name="description" placeholder="description" class="form-control">
+      <textarea name="description" id="exampleInputEmail1" cols="40" rows="3" class="text-area"></textarea>
     </div>
-    <button type="submit" onclick="return saveBtn()"> Save</button>
+    <button type="submit"> Save</button>
   </form>
 </div>
 
 <script>
-  function saveBtn() {
-    return alert('已新增餐廳！')
-  }
+  // Example starter JavaScript for disabling form submissions if there are invalid fields
+  (function () {
+    'use strict';
+    window.addEventListener('load', function () {
+      // Fetch all the forms we want to apply custom Bootstrap validation styles to
+      var forms = document.getElementsByClassName('needs-validation');
+      // Loop over them and prevent submission
+      var validation = Array.prototype.filter.call(forms, function (form) {
+        form.addEventListener('submit', function (event) {
+          if (form.checkValidity() === false) {
+            event.preventDefault();
+            event.stopPropagation();
+          }
+          form.classList.add('was-validated');
+        }, false);
+      });
+    }, false);
+  })();
 </script>
