--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,7 +1,6 @@
 /* title */
 *{
   /* font-family: 'Julius Sans One', sans-serif; */
-  /* font-family: 'Gaegu', cursive; */
   font-family: 'Mukta', sans-serif;
   position: relative;
   box-sizing: border-box;
@@ -12,7 +11,6 @@ body{
   background-color: #2B2C28;
   padding: 40px;
   padding-top: 0px;
-  /* background-color: #fafafa; */
 }
 
 .body-container {
@@ -52,7 +50,6 @@ a {
 .title-image {
   width: 100%;
   height: 360px;
-  /* background: center center url('https://images.unsplash.com/photo-1532723136756-147542750512?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80'); */
   background: center center url('https://images.unsplash.com/photo-1525648199074-cee30ba79a4a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
   background-size: cover;
   filter: blur(1px);
@@ -65,20 +62,25 @@ a {
   margin: auto;
   padding: 20px;
   margin-top: -80px;
-  /* search bar樣式 */
+  /* search bar 外觀樣式 */
   width: 60%;
-  height: 150px;
-  /* background-color: #edeceb; */
+  height: 130px;
   border-radius: 10px;
   background-color: rgba(212, 217, 218, 0.5);
   box-shadow: 2px 2px 8px;
 }
 
+/* 字體樣式 */
 .search-title {
-  font-size: 20px;
+  font-family: 'Gaegu', cursive;
+  font-size: 30px;
+  color: #fafafa;
+}
+.fa-search {
+  color: #fafafa;
 }
 
-/* index */
+/* index 首頁 */
 .container {
   margin-top: -35px;
 }
@@ -88,8 +90,9 @@ a {
   margin: 20px;
 }
 .card {
-  margin: auto;
-  margin-top: 40%;
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-top: 30%;
   border-radius: 15px;
   box-shadow: 2px 2px 8px;
 
@@ -103,6 +106,10 @@ a {
   cursor: pointer;
 }
 
+/* card-footer */
+.card-footer {
+  padding: 10px;
+}
 .card-rate {
   display: inline-block;
   box-sizing:border-box;
@@ -115,6 +122,8 @@ a {
   padding: 5px;
 }
 
+
+
 .fas{
   text-align: center;
 }
@@ -126,7 +135,7 @@ a{
   color: white;
   border: solid 1px ;
   border-radius: 10px;
-  background-color: #d9e0b0;
+  background-color: #b4d4d4;
   padding: 8px;
  
 }
@@ -147,14 +156,14 @@ a{
   display: inline;
   text-decoration:none;
   color: white;
-  background-color: #d9e0b0;
+  background-color: #b4d4d4;
   border-radius:10px ;
   padding: 8px;
   margin: 5px;
 }
 
 
-/* detail */
+/* detail 資訊*/
 .restaurant-detail{
   padding: 40px;
   margin: 5px;
@@ -181,7 +190,7 @@ a{
   border-radius: 5px;
 }
 
-/* new page */
+/* new page 新增頁面*/
 .new-page{
   margin: auto;
   width: 60%;
@@ -205,7 +214,7 @@ a{
   width: 100%;
 }
 
-/* edit page */
+/* edit page 修改頁面*/
 
 .edit-page {
   margin: auto;
@@ -219,33 +228,36 @@ a{
 
 /* RWD */
 @media screen and (max-width: 992px) {
-  
-  .card img{
-    height: 115px;
-  }
+
 }
 
 @media screen and (max-width: 768px) {
-  
-.search-bar {
-  position: static;
-  width: 100%;
-  padding: 10px;
-  margin-top: 20px;
-  border-radius: 20px;
-  background-color: rgba(192,195,192,0.6);
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+.card {
+  margin: auto;
+  margin-top: 20%;
+}
+.restaurant-detail{
+text-align: center;
 }
 .search-title {
-  font-size: 25px;
+  font-size: 20px;
 }
 
 }
 
 @media screen and (max-width: 575px) {
-  
-  .card img{
+.card {
+  margin: auto;
+  margin-top: 20%;
+}
+.card img{
     height: auto;
-  }
+}
+.search-title {
+  font-size: 16px;
+}
+.restaurant-detail{
+  text-align: center;
+}
   
 }
