--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -1,8 +1,8 @@
 <div class="row restaurant-detail">
-  <div class="col-5">
+  <div class="col-lg-6">
     <img src="{{restaurants.image}}" alt="restaurant-image" class="detail-image" style="height: 300px; ">
   </div>
-  <div class="col-7">
+  <div class="col-lg-6">
     <h1>{{restaurants.name}}</h1>
     <p class="detail-category">{{restaurants.category}}</p>
     <p> 地址：{{restaurants.location}} <a href="{{restaurants.google_map}}"><i class="fas fa-location-arrow"></i></a> </p>
