feat: add  Destructuring Assignment and textarea

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -51,9 +51,8 @@
     </div>
     <div class="mb-3 input-group-lg">
       <label for="exampleInputEmail1" class="form-label">餐廳描述：</label>
-      <textarea name="description" id="exampleInputEmail1" cols="40" rows="3" class="text-area">
-        {{restaurants.description}}
-      </textarea>
+      <textarea name="description" id="exampleInputEmail1" cols="40" rows="3"
+        class="text-area">{{restaurants.description}}</textarea>
     </div>
     <button type="submit" onclick="return saveBtn()"> Save</button>
   </form>
