feat: add method override

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,5 +1,5 @@
 <div class="edit-page">
-  <form action="/restaurants/{{restaurants._id}}/edit" method="POST">
+  <form action="/restaurants/{{restaurants._id}}?_method=PUT" method="POST">
     <h2 class="new-title">修改餐廳</h2>
     <hr>
     <div class="row mb-3">
