--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -74,7 +74,7 @@ a {
 .search-title {
   font-family: 'Gaegu', cursive;
   font-size: 30px;
-  color: #fafafa;
+  color: #40798C;
 }
 .fa-search {
   color: #fafafa;
@@ -117,11 +117,6 @@ a {
 .inner:hover img {
   transform: scale(1.1);
 }
-
-/* card-footer */
-.card-footer {
-  padding: 10px;
-}
 .card-rate {
   display: inline-block;
   box-sizing:border-box;
@@ -134,7 +129,10 @@ a {
   padding: 5px;
 }
 
-
+/* card-footer */
+.card-footer {
+  padding: 10px;
+}
 
 .fas{
   text-align: center;
@@ -149,19 +147,16 @@ a{
   border-radius: 10px;
   background-color: #b4d4d4;
   padding: 8px;
- 
 }
 .cardBtn:hover {
   text-decoration: none;
   color: #fafafa;
+  background-color: #40798C;
 }
 .btn-edit {
   color:white;
   background-color: transparent;
   border: none;
-}
-.deleteBtn:hover{
-  color: white;
 }
 
 .btnForm{
@@ -172,6 +167,10 @@ a{
   border-radius:10px ;
   padding: 8px;
   margin: 5px;
+}
+.btnForm:hover{
+  color: white;
+  background-color: #40798C;
 }
 
 
