--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,14 +41,23 @@
     {{!-- title-image --}}
     <div class="title-image">
     </div>
-
+    {{!-- sort --}}
+    {{!-- <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+        aria-expanded="false">
+        Sort
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="#">店名</a></li>
+        <li><a class="dropdown-item" href="#">餐廳類型</a></li>
+        <li><a class="dropdown-item" href="#">評分-由高至低</a></li>
+      </ul>
+    </div> --}}
     {{!-- render --}}
     {{{body}}}
 
-    {{!-- bootstraps --}}
-
   </div>
-
+  {{!-- bootstraps --}}
   <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
   <script src="/javascripts/jquery-3.5.1.js"></script>
   <script src="/javascripts/bootstrap.js"></script>
