--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -55,7 +55,16 @@ a {
   filter: blur(1px);
 }
 
+/* sort */
+.btn-group {
+  left: 85%;
+}
+.sort-btn:hover {
+  color: #fafafa;
+}
 
+
+/* search bar */
 .search-bar {
   /* position */
   position: relative;
@@ -66,15 +75,15 @@ a {
   width: 60%;
   height: 130px;
   border-radius: 10px;
-  background-color: rgba(212, 217, 218, 0.5);
+  background-color: rgba(212, 217, 218, 0.8);
   box-shadow: 2px 2px 8px;
 }
 
 /* 字體樣式 */
 .search-title {
   font-family: 'Gaegu', cursive;
-  font-size: 30px;
-  color: #40798C;
+  font-size: 25px;
+  color: #426A5A;
 }
 .fa-search {
   color: #fafafa;
@@ -85,8 +94,14 @@ a {
   margin-top: -35px;
 }
 
+.list-btn {
+  color: #595959;
+  font-size: 28px;
+}
+
 .line{
   text-align: center;
+  width: 100%;
   margin: 20px;
 }
 .card {
@@ -237,9 +252,28 @@ a{
   padding: 20px;
 }
 
+/* list table */
+.list-container {
+  padding: 20px;
+}
+.table-list {
+  width: 80%;
+  margin: auto;
+  padding: 20px;
+}
+
+.table-btn {
+  text-align: center;
+}
+
 /* RWD */
 @media screen and (max-width: 992px) {
-
+/* sort */
+.btn-group {
+  margin:0 auto;
+  margin-top: 80px;
+  
+}
 }
 
 @media screen and (max-width: 768px) {
@@ -250,8 +284,32 @@ a{
 .restaurant-detail{
 text-align: center;
 }
+
+/* search bar */
+.search-bar {
+  /* position */
+  position: relative;
+  margin: auto;
+  padding: 20px;
+  margin-top: -150px;
+  /* search bar 外觀樣式 */
+  width: 60%;
+  height: 130px;
+  border-radius: 10px;
+  background-color: rgba(212, 217, 218, 0.8);
+  box-shadow: 2px 2px 8px;
+}
 .search-title {
   font-size: 20px;
+}
+
+/* sort */
+.btn-group {
+  left: 50%;
+  right: 50%;
+  margin: auto;
+  margin-top: 80px;
+  
 }
 
 }
