--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,18 +41,7 @@
     {{!-- title-image --}}
     <div class="title-image">
     </div>
-    {{!-- sort --}}
-    {{!-- <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Sort
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <li><a class="dropdown-item" href="#">店名</a></li>
-        <li><a class="dropdown-item" href="#">餐廳類型</a></li>
-        <li><a class="dropdown-item" href="#">評分-由高至低</a></li>
-      </ul>
-    </div> --}}
+
     {{!-- render --}}
     {{{body}}}
 
@@ -61,7 +50,12 @@
   <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
   <script src="/javascripts/jquery-3.5.1.js"></script>
   <script src="/javascripts/bootstrap.js"></script>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
