--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -18,7 +18,7 @@
     <div class="row mb-3">
       <div class="col-sm-6">
         <label class="form-label" for="category">*餐廳類型 ：</label>
-        <input class="form-control" list="categorys" name="category" placeholder="category" id="category" maxlength="5"
+        <input class="form-control" list="categorys" name="category" placeholder="category" id="category" maxlength="10"
           required>
         <datalist id="categorys">
           <option>中東料理</option>
@@ -31,7 +31,7 @@
       </div>
       <div class="col-sm-6">
         <label class="form-label" for="rating">*評分 ： </label>
-        <input type="number" class="form-control" name="rating" min="0" max="5" step="0.1" required>
+        <input type="number" class="form-control" name="rating" min="0" max="5" step="0.1" value="3" required>
       </div>
     </div>
     <div class="row mb-3">
